crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_pagination_cursor_server.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("GET /api/posts", func(w http.ResponseWriter, r *http.Request) {
		result, err := h.ListPosts()
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	return mux
}
