crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_pagination_offset_types.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type Post struct {
	Id    int64  `json:"id"`
	Title string `json:"title"`
}

type ListPostsPage struct {
	Items      []Post `json:"items"`
	TotalCount int64  `json:"totalCount"`
}
