crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_partial_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type User struct {
	Id   int64  `json:"id"`
	Name string `json:"name"`
	Age  int64  `json:"age"`
}

type UpdateUserBody struct {
	Name *string `json:"name,omitempty"`
	Age  *int64  `json:"age,omitempty"`
}
