crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_pick_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type User struct {
	Id    int64  `json:"id"`
	Name  string `json:"name"`
	Email string `json:"email"`
	Age   int64  `json:"age"`
}

type UpdateEmailBody struct {
	Email string `json:"email"`
}
